# dagops

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  _code.py  async_test.py  asynctask.py  dagops.sqlite  first_completed.py  main.py  pyproject.toml  setup.cfg  test_logs.py  tt.py  write_to_mongo.py
.github/workflows/: ci.yml
_archive/: asynctask.py  main.py  manager.py  task.py  test_logs.py
dagops/: _state.py  constant.py  daemon.py  dag.py  dependencies.py  fsm.py  manager.py  server.py  state.py  status.py  task.py  task_status.py  util.py  worker.py
dagops/exists/: exists.py  filesystem_path.py  redis_key.py
dagops/state/: database.py  models.py  schemas.py  status.py
dagops/state/crud/: base.py  dag.py  exceptions.py  file.py  task.py  worker.py
dagops/static/css/: table.css
dagops/static/templates/: base.j2  dag.j2  file.j2  files.j2  logs.j2  task.j2  tasks.j2  tasks_table.j2  worker.j2  workers.j2
examples/: batch_task.py  counter.py  main.py  write_to_mongo.py
examples/commands/: counter.py  long_command.py
static/css/: base.css
static/templates/: base.j2  dag.j2  dags.j2  files.j2  logs.j2  task.j2  tasks.j2  tasks_table.j2
tests/: cache_test.py  conftest.py  pipeline_test.py  test_dummy.py  test_redis.py
tests/state/: conftest.py
