

[project]
name = "dagops"
version = "0.5.1"
authors = [
    {name = "Alexander Rodionov", email = "tandav@tandav.me"},
]
description = "dag/task runner backed by sqlite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn",
    "fastapi",
    "aiofiles",
    "Jinja2",
    "humanize",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary",
    "redis",
    "transitions",
]

[project.optional-dependencies]
dev = [
    "bumpver",
    "pre-commit",
    "pytest",
    "requests",
    "python-dotenv",
    "pytest-asyncio",
]

[project.urls]
source = "https://github.com/tandav/dagops"
# Documentation = "https://python-humanize.readthedocs.io/"
# Funding = "https://tidelift.com/subscription/pkg/pypi-humanize?utm_source=pypi-humanize&utm_medium=pypi"
# Homepage = "https://github.com/python-humanize/humanize"
# "Issue tracker" = "https://github.com/python-humanize/humanize/issues"
# "Release notes" = "https://github.com/python-humanize/humanize/releases"

# ==============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"dagops.static" = ["**/*"]

# ==============================================================================

[tool.bumpver]
current_version = "v0.5.1"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{pep440_version}"',
    '^current_version = "{version}"',
]
"dagops/__init__.py" = [
    "^__version__ = '{pep440_version}'",
]

# ==============================================================================

[tool.mypy]
# todo: review this
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ==============================================================================

[tool.ruff]
select = [
    "E", "W", # pycodestyle
    "F",      # pyflakes
    "C",
    "I",      # isort
    "PTH",    # pathlib
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.isort]
force-single-line = true

# ==============================================================================
